* Detect changes of included resources and refresh all affected projects.

SBuild Eclipse Plugin 0.4.2 - 2013-06-07:

* Support for resolving/downloading sources and javadoc. This delegated the
  to a "source" and a "javadoc" scheme handler, which will be available since
  SBuild 0.4.0.9000 (trunk milestone).
* Show an Error Marker in Eclipse (Package Explorer, Problems View, Editor)
  for SBuild build file errors.
* Updates of the build file will now immediatly reflected in the classpath
  container. No more need to close/reopen the project.
* The SBuild Libraries entry in Package Explorer will be decorated with error
  messages, if downloading of some dependencies failed.

SBuild Eclipse Plugin 0.4.1 - 2013-04-29:

* Fixed issues with classpath container refreshes. Now, classpath changes are
  properly propagated to the Eclipse workspace.
* SBuild JARs are only loaded once and the classloader is shared, which will
  reduce memory consumption and improve speed (class loading and JIT compiler
  effects).

SBuild Eclipse Plugin 0.4.0 - 2013-04-20

* Minimal requires SBuild version is now SBuild 0.4.0.
* Fixed API incompatibilities.
* Workspace resolution configuration with regular expressions now supports
  substution based on matched groups.

SBuild Eclispe Plugin 0.3.0 - 2013-01-06

* Switched to Scala 2.10.
* Supported SBuild version is now 0.3.0 or above because of Scala 2.10 binary
  incompatibilities.
* Made execution more robust.

SBuild Eclipse Plugin 0.2.1 - 2012-11-07

* The SBuild Libraries classpath will be automatically refreshed when
  workspace projects will be opened or closed, resulting in proper workspace
  resolution.
* Added Scala Library to Eclipse Update Site

SBuild Eclipse Plugin 0.2.0 - 2012-10-30

* First separate release of SBuild Eclipse Plugin, with independent version,
  compatible to SBuild 0.1.4 and above.
* Added Graphical Editor for Workspace Project Aliases to Classpath container